# Swan

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  cli-reference.md  concepts.md  configuration.md  contributing.md  plugins.md
swan/: __main__.py  config.py  log.py
swan/cli/: main.py  output.py
swan/cli/commands/: agent.py  plugin.py  result.py  run.py  swarm.py  task.py
swan/core/: enums.py  executor.py  models.py  scheduler.py
swan/plugins/: __init__.py  base.py  registry.py
swan/plugins/builtin/: claude.py  http.py  shell.py
swan/state/: base.py  local.py
swan/state/backends/: redis_backend.py
tests/: conftest.py  test_executor.py  test_models.py  test_plugins.py  test_scheduler.py  test_state.py
